public/scss/style.scss
$side-bar-color: #57DAC2;
$font-color: #F8E71C;
$printer-printing-color: #DF5A49;
$menu-color-light: #49B29E;
$menu-color-dark: #1E4C44;
$background: #3B3C3C;


html {
	height: 100vh;
	background: $background;
}

.not_sidebr{
	height: 100vh;
}

.ripple { /*stylings for the circular overlay*/
  position: relative;
  top: 0px;
  left: 0px;
  border-radius: 100%;
  width: 0;
  height: 0;
  background: rgba(0,0,0, .05);
  -webkit-transition: all .3s ease-out;
  transition: all .3s ease-out;
}

.notransition { /*used to reset the ripple without an animatiion*/
  -webkit-transition: none !important;
  transition: none !important;
}


.container-fluid{

	.title p {
		float: left;
	}
	
	#side-bar{
		height: 100vh;
		position: fixed;
		top: 0px;
		// left: 0px;
		left: -400px;
		width: 400px;
		background: $side-bar-color;
		
		.menu-logo{
			margin: 20px ;
			float: left;
			height: 86px;
			width: 267px;
			background-image: url(../img/black-logo.png);
		}

		.menu-btm-dark{
			float: left;
			margin: 25px 0 25px 25px;
			height: 59px;
			width: 65px;
			background-image: url(../img/menu-btm-dark.png);
		}
		
		.print-status{
			padding: 12px 0 2px 0 ;
			background: $printer-printing-color;
			text-align:center;
		    font-size: 60px;
		    color: $font-color;
		}

		.row{

			.side-bar-icon{
				float: left;
				height: 190px;
				width: 200px;
				overflow: hidden;

				p{
					text-align:center;
				    font-size: 38px;
				    color: $menu-color-light;
				}
				
				.icon{
					width: 50%;
					margin: 30px auto auto auto;
				}
			}

		}		
	}

	.lr{
		height: 100vh;
	}

	.dark-background{
		background: $background;
	}

	.logo{
	    position: relative;
		margin: 0px auto;
	    top:32%;
		background-image: url(../img/logo.png);
		height: 260px;
		width: 740px;
	}

	.title{
		// clear: both;
		float: left;
		position: relative;
		left: 100px;
		top: 20px;
		p{
			height: 100px;
			// width: 30px;
		    font-size: 50px;
		    color: $font-color;

		    #startbutton{
				width: 300px;
			}
		}

		// Adimn btm list
		.btm-list{
			@media screen and (max-width: 700px) {
				height: 100px;
				position: relative;
				top: -10px;
				left: -50px;
				margin: 0 0 0 0;
			}

			float: left;
			margin: 15px 20px 20px 20px;

			.btm{
				float: left;
			}
			.post-chose{
				margin: 8px 10px 0 10px;
				float: left;
			}

			.form-control{
				width: 300px;
			}
		}
	}

	
	
	.menu-btm{
		position: fixed;
		top: 25px;
		left: 25px;
		height: 59px;
		width: 65px;
		background-image: url(../img/menu-btm.png);
	}

	// new-print.html

	.cam-posi{
		position: relative;
		top: 50px;

		// 攝影機相關css setting
		#camera{

			#video {
				width:900px;
				height:675px;
				transform: rotateY(180deg);
			}

			#photo {
			    -webkit-transform: rotateY(180deg);
				transform: rotateY(180deg);
			}
		}

		#canvas {
			display: none;
		}
	}

	.cam-preview{
		height: 675px;
		width: 900px;
		background: #636363;
		float: left;
		position: absolute;

		p{
		    position: relative;
			top: 40%;
			text-align:center;
		    font-size: 100px;
		    color: #888;
		}

	}

	.cam-control{
		position: relative;
		top: 100px;
		left: 50px;
		float: left;
		height: 350px;
		width: 900px;
		// background: #F00;
		z-index: 99;

		p{
		text-align:center;
	    font-size: 50px;
	    color: $font-color;

		    #startbutton{
				width: 300px;
			}
		}

		.take_pic{
			display: none;
		}

		.chose_pic{
			display: none;
			position: relative;
			top: 80px;

			button{
				width: 200px;
			}

		}


	}
	

	// 列表
	.gallery{
		width: 100%;
		margin:0px auto;
	}

	.items{
		float: left;
		margin: 20px 10px 20px 10px;
		border-style:solid;
		-webkit-border-radius: 10px;
		-moz-border-radius: 10px;
		border-radius: 10px;
		
		img {
			width: 215px;
		}
		
		.status{

			p{
				text-align: center;
				font-size: 28px;
			}
		}

	}

	.pic-select{
		display: none;

		.window{
			background: white;
		}

		div{
			float: left;
		}

		.select-close{
			float: right;
			font-size: 50px;

		}

		.err{
			color: red;
			font-size: 80px;
		}

		.info{
			padding: 10px 0 0 5px;
		}

		.control{
			padding-top: 20px;

			.btn{
				margin: 0 3px 0 3px;
			}
		}
	}


	//相片狀態
	.sta_null{
		text-align: center;
		font-size: 35px;
		color: gray;
	}

	.label-text{	
		font-weight: normal;
	    font-family: arial;
	}

	.label-default{
		background: #D8D8D8;
		border-color: #D8D8D8;
		color: $background;
	}

	.label-danger{
		border-color: #FF983B;
		background: #FF983B; 
		color: black;
	}
	.label-success{
		border-color: #74FF83;
		background: #74FF83;
		color: black;
	}

	.label-info{
		color: black;
	}

	.in_form{
		.input-group{
			// width: 800px;
			margin: 0px auto;
		}

		#login{
			font-size: 50px;
			width: 400px;
			height: 100px;
		}

		#btm{
			font-size: 50px;
			height: 100px;	
		}
	}



}


.container-fluid{
	background: $background;
}


.col-centered{
    float: none;
    margin: 0 auto;
}


.table-cell{
	@media screen and (max-width: 800px) {
		display: none;
		
	}
	
	overflow: hidden;
	float: left;
	// width: 100%;
    // margin: 0 auto;
	box-sizing: border-box;
	padding-bottom: 20px;
	padding-top: 20px;

	#console-left{
		float: left;
		width: 50%;
		padding-left: 20px;
		box-sizing: border-box;


		#console {
			float: left;
		    height: 180px;
		    width: 100%;
		    text-align: left;
		    background-color: #ddd;

		    p{
		    	margin: 0 0 1px;
		    }
		}

		.control_btm{

			// margin: 0px auto;
			clear: both;

			.w{
				clear: right;
				float: left;
				background: gray;
				text-align: center;
				margin: 8px;
				font-size: 28px;
				width: 135px;
				border: 1px solid #aaa;
				font-weight: bold;
			}

			button{
				margin: 3px 0 5px 10px;
			}

			.sendgc{
				float: left;
			}

			#autoHome{
				margin-left: 10px;
			}

		}

	}

	#console-right{
		float: left;
		width: 50%;

		.control_btm{
			float: right;
			button{
				margin: 3px 0 0px 10px;
			}
		}


		.comn{
			float: left;
			height: 250px;
			width: 100%;
			// clear: both;
		    position: relative;

			.text{
				font-size: 50px;
			    color: gray;
	    		text-align: right;
			}

			#command {
				background: rgba(100%,100%,100%,0.5);
				height: 100%;
				width: 100%;
				overflow: auto;

				position:absolute;
			    left:0;
			    top:0;
			}	
		}
	}

}

